[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sdrplay"
version = "1.0.0"
description = "Python wrapper for SDRplay API"
authors = [
    {name = "Ian Ross Williams", email = "ianrosswilliams@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]

[tool.setuptools]
packages = ["sdrplay"]
package-data = {"sdrplay" = ["_sdrplay.so"]}

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"
